After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 720809 - read a float xml node return a bad value
read a float xml node return a bad value
Status: RESOLVED FIXED
Product: aravis
Classification: Other
Component: Genicam
0.2.x
Other Linux
: Normal normal
: ---
Assigned To: aravis-maint
aravis-maint
Depends on:
Blocks:
 
 
Reported: 2013-12-20 07:20 UTC by you yeshuang
Modified: 2013-12-23 08:42 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description you yeshuang 2013-12-20 07:20:58 UTC
hi;
 when i read the ResultingFrameRateAbs node in Balser camera acA2500-14gm, i get value 0, but the right value is 14.59 at that time.
 so i use arv-evaluator-test with "0.06<>0?1/0.06:0"(this formal is simmilar to the way ResultingFrameRateAbs be caculated), the result is 0.
Comment 1 Emmanuel Pacaud 2013-12-20 15:09:09 UTC
Hi.

Thanks for the bug report. I think this bug is fixed in master since this commit:

https://git.gnome.org/browse/aravis/commit/?id=bfee6bcd5f4cb46f94bcb333727ce652ebd890f2

Could you try to apply this patch to your installation.

By the way, are you really using aravis on windows ? If so, we would be very interested on a feedback on what is needed for the compilation on windows, and what issues you probably had during the process.

Cheers.
Comment 2 you yeshuang 2013-12-21 08:14:38 UTC
hi Emmanuel,
i am not using on windows.

i update the patch but still get value 0:
$ ./arv-tool-0.4 control ResultingFrameRateAbs
  Basler-21317028
  ResultingFrameRateAbs = 0

maybe i find where the bug is. if i modify the line 352 in arvevaluator.c:

//if (length_double > length_int64) {
if (length_double >= length_int64) {

then get the right value:
$ ./arv-tool-0.4 control ResultingFrameRateAbs
  Basler-21317028
  ResultingFrameRateAbs = 14.5921

the change i think makes no efficiency because it treats all literal as float.
Comment 3 Emmanuel Pacaud 2013-12-21 22:35:48 UTC
This commit should fix this issue:

https://git.gnome.org/browse/aravis/commit/?id=cce7ef8b4ea7857a78817684a196ccb68241af2b
Comment 4 you yeshuang 2013-12-23 01:50:09 UTC
thanks, it works
Comment 5 Emmanuel Pacaud 2013-12-23 08:42:45 UTC
Great.

Thanks again.