evaluator: fix comparisons when one of the operand is a double.

fixes https://bugzilla.gnome.org/show_bug.cgi?id=720809.